--- a/vector/vector.vcxproj
+++ b/vector/vector.vcxproj
@@ -79,6 +79,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\_share\comparator.h" />
+    <ClInclude Include="..\_share\rand.h" />
+    <ClInclude Include="..\_share\release.h" />
+    <ClInclude Include="..\_share\util.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="vector.h" />
