--- a/list/list.vcxproj
+++ b/list/list.vcxproj
@@ -84,6 +84,8 @@
     <ClInclude Include="list.h" />
     <ClInclude Include="listNode.h" />
     <ClInclude Include="List_implementation.h" />
+    <ClInclude Include="List_insert.h" />
+    <ClInclude Include="List_reverse.h" />
     <ClInclude Include="list_test.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
